--- a/px-checkout/src/main/res/layout/px_activity_payment_result.xml
+++ b/px-checkout/src/main/res/layout/px_activity_payment_result.xml
@@ -50,12 +50,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <com.mercadopago.android.px.internal.features.payment_result.remedies.view.PaymentResultFooter
-                android:id="@+id/remedies_footer"
-                android:visibility="gone"
-                android:layout_marginStart="@dimen/ui_3m"
-                android:layout_marginEnd="@dimen/ui_3m"
-                android:layout_marginBottom="@dimen/ui_3m"
+            <com.mercadopago.android.px.internal.features.payment_result.presentation.PaymentResultFooter
+                android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
