--- a/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
@@ -20,62 +20,16 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/px_m_margin"
         android:paddingRight="@dimen/px_m_margin"
-        app:layout_constraintBottom_toTopOf="@id/installments_header"
+        app:layout_constraintBottom_toTopOf="@id/installments_header_experiment_container"
         app:layout_constraintTop_toBottomOf="@id/summary_view" />
 
-    <com.mercadopago.android.px.internal.view.PaymentMethodHeaderView
-        android:id="@+id/installments_header"
+    <FrameLayout
+        android:id="@+id/installments_header_experiment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/container"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labeledSwitch" />
 
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <com.mercadopago.android.px.internal.view.DynamicHeightViewPager
-            android:id="@+id/payment_method_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_height="500dp" />
-
-        <com.mercadopago.android.px.internal.view.ScrollingPagerIndicator
-            android:id="@+id/indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            app:px_spi_dotColor="@color/px_expressCheckoutScrollIndicatorColor"
-            app:px_spi_dotSelectedColor="@color/ui_components_primary_color" />
-
-        <fragment
-            tools:layout="@layout/px_fragment_pay_button"
-            android:id="@+id/pay_button"
-            android:name="com.mercadopago.android.px.internal.features.pay_button.PayButtonFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/px_m_margin"
-            android:layout_marginTop="@dimen/px_s_margin"
-            android:layout_marginEnd="@dimen/px_m_margin"
-            android:layout_marginBottom="@dimen/px_m_margin" />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/installments_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/installments_header"
-        tools:visibility="gone" />
-
-    <FrameLayout
-        android:id="@+id/offline_methods_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <FrameLayout
         android:id="@+id/loading"
