--- a/px-checkout/src/main/res/values/colors.xml
+++ b/px-checkout/src/main/res/values/colors.xml
@@ -129,7 +129,7 @@
 
     <color name="px_summary_top_color">@color/ui_components_light_grey_color</color>
     <color name="px_color_terms_and_conditions">@color/px_darkest_gray</color>
-    <color name="px_color_payer_costs">#40000000</color>
+    <color name="px_color_payer_costs">#999999</color>
     <color name="px_color_payer_costs_selected_background">#f5f5f5</color>
     <color name="px_review_gray_background">#F7F7F7</color>
     <color name="px_color_unlock_card_text">#A1924C</color>
