[Feature][ci size] Web Pay -  Bottom Sheet (#2403)
* [Feature] Card form bottom sheet (#2390)

* add sheet option model

* card form bottom sheet

* recycler view and adepter added

* cardformoption click listener added

* add init type to new card meta data

* refactor recycler view adapter

* revert changes

* refactor open card form

* add code

* rename file

* update text sizes

* rename package

* rename package again

* review changes

* update layout sheet option

* refactor header bottom sheet

* change name method

* change margins sheet options row (#2395)

* [Feature] card form web pay integration (#2402)

* add sheet option model

* card form bottom sheet

* recycler view and adepter added

* cardformoption click listener added

* add init type to new card meta data

* refactor recycler view adapter

* revert changes

* refactor open card form

* add code

* rename file

* update text sizes

* rename package

* rename package again

* review changes

* update layout sheet option

* refactor header bottom sheet

* change name method

* change margins sheet options row

* card form web pay integration

* process card form result

* Update init cardform for webpay

* card form webpay added

* delete imports

* logic step was to launch cardform to onetap fragment

* card form option validation fixed

* experimental configuration added

* fixed

* Update cardform version and build gradle

* remove imports

* request changes

* add NonNull annotation

--- a/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
@@ -52,4 +52,12 @@
         android:name="com.mercadopago.android.px.internal.features.express.offline_methods.OfflineMethodsFragment"
         tools:layout="@layout/px_fragment_offline_methods" />
 
+    <com.mercadolibre.android.andesui.bottomsheet.AndesBottomSheet
+        android:id="@+id/new_card_sheet_options"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:andesBottomSheetState="collapsed"
+        app:andesBottomSheetTitleAlign="centered"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
